CCLE-8261 - fixed the spacing and alignment for both the site indicator radio and the invitation radio

--- a/enrol/invitation/styles.css
+++ b/enrol/invitation/styles.css
@@ -16,3 +16,7 @@
 .mform-invite #fitem_id_email_clarification {
     margin-top: -1.0em;
 }
+
+#id_header_role [data-fieldtype="group"] {
+    display: block;
+}
