--- a/theme/uclashared/scss/course.scss
+++ b/theme/uclashared/scss/course.scss
@@ -36,3 +36,13 @@
     text-align: center;
     border-radius: 15px;
 }
+
+#id_uclasiteindicator [data-fieldtype="group"] {
+    flex-flow: column;
+    align-items: flex-start;
+    
+    input[type="radio"] {
+        align-self: baseline;
+        top: 5px;
+    }
+}
